--- a/disclaimer.html
+++ b/disclaimer.html
@@ -244,7 +244,15 @@
         <div class="home-wrapper">
             <!-- >Welcome to  Narconon United Kingdom START -->
 
+<div id="main">
+<h1>Disclaimer</h1>
 
+<p>The results described on this site are based on data collected regarding short- and intermediate-term efficacy of the Narconon Programme.  Individual results are not guaranteed and may vary.</p>
+
+<div class="mb3">&nbsp;</div>
+<div class="clearfix prev-next-block">
+</div>
+</div>
 
             <!-- >Welcome to  Narconon United Kingdom END -->
         </div>
