--- a/online-privacy-notice.html
+++ b/online-privacy-notice.html
@@ -1382,9 +1382,9 @@ Email: info@narcononuk.org
                 <div class="copyright-inner" itemscope itemtype="http://schema.org/Organization" itemid="http://www.narcononuk.org.uk/">
                     <meta itemprop="telephone" content="01435512460">
                     <div>
-                        <a href="/tmnotice.html">© 2015  
+                        <a href="tmnotice.html">© 2015  
                         <span itemprop="name">Narconon United Kingdom</span>. 
-                        All Rights Reserved.</a> &nbsp;&bull;&nbsp; <a href="/online-privacy-notice.html">Online Privacy Notice</a> &nbsp;&bull;&nbsp; <a href="/terms-of-use.html">Terms of Use</a> &nbsp;&bull;&nbsp; <a href="/notice-of-privacy-practices.html">Notice of Privacy Practices</a> &nbsp;&bull;&nbsp; <a href="/disclaimer.html">Disclaimer: Individual results are not guaranteed and may&nbsp;vary.</a> <br/>&nbsp;
+                        All Rights Reserved.</a> &nbsp;&bull;&nbsp; <a href="online-privacy-notice.html">Online Privacy Notice</a> &nbsp;&bull;&nbsp; <a href="terms-of-use.html">Terms of Use</a> &nbsp;&bull;&nbsp; <a href="notice-of-privacy-practices.html">Notice of Privacy Practices</a> &nbsp;&bull;&nbsp; <a href="disclaimer.html">Disclaimer: Individual results are not guaranteed and may&nbsp;vary.</a> <br/>&nbsp;
                     </div>
                     <div class="copyright-end-line">Narconon and the Narconon logo are trademarks and service marks owned by the Association for Better Living and Education International and are used with its permission.
                     </div>
@@ -1397,7 +1397,7 @@ Email: info@narcononuk.org
                     Cookies help our website work properly. By using our website, you agree to our use of cookies.
                     &nbsp; 
                     <a class="okbtn" href="#">OK</a>&nbsp;
-                    | &nbsp;<a class="morebtn" href="/online-privacy-notice.html" target="_blank">read more</a>
+                    | &nbsp;<a class="morebtn" href="online-privacy-notice.html" target="_blank">read more</a>
                 </div>
             </div>
         </div>
