--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <link rel="stylesheet" type="text/css" href="theme/css/videos-box.css"/>
     <link rel="stylesheet" type="text/css" href="theme/css/footer.css"/>
     <link rel="stylesheet" type="text/css" href="theme/css/contact_form.css"/>
+    <link rel="stylesheet" type="text/css" href="theme/css/geolocation.css"/>
 
     <style>
         .narconon-infowindow {
@@ -899,6 +900,14 @@
         }
     </style>
 
+    <style>
+        /* Some reset */
+        .row {
+            margin: 0;
+            padding-left: 5px;
+            padding-right: 5px;
+        }
+    </style>
 <!-- Video Animation START -->
     <script>
         (function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement)
@@ -2019,7 +2028,7 @@
             </div>
 
             <!-- Google Maps API START -->
-            <!--
+            
             <script src="https://maps.googleapis.com/maps/api/js"></script>
             <script>
                 $(document).ready(function() {
@@ -2067,7 +2076,7 @@
                     marker.setMap(map);
                 });
             </script>
-            -->
+            
             <!-- Google Maps API END -->
 
             <div class="extender" style="margin-top: 20px; padding-bottom: 30px; padding-top: 35px;">
