--- a/index.html
+++ b/index.html
@@ -3009,15 +3009,14 @@
             <form method="post" action="thankyou.html">
                 <div class="modal-header">
                     <button type="button" class="close" role="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h3>Personal Information</h3>
+                    <h3>Request information <br/> from a specialist.</h3>
+                    <img src="theme/images/carf-accredited-logo-small.png" rel="carf" />
+                    <img src="theme/images/cqc-logo-2.png" rel="cqc" />
                 </div>
                 <div class="modal-body">
                     <ul class="fields">
                         <li>
                             <input type="text" name="name" placeholder="Full Name" data-content="Name" />
-                        </li>
-                        <li>
-                            <input type="text" name="assoc" placeholder="School or Association" data-content="Association" />
                         </li>
                         <li>
                             <input type="tel" name="phone" placeholder="Phone Number" data-content="Phone" />
@@ -3037,7 +3036,6 @@
                 <div class="modal-footer">
                     <div class="form_field">
                         <button class="btn btn-primary"  role="submit" type="button">Send</button>
-                        <button class="btn btn-danger"  role="close" type="button">Cancel</button>
                     </div>
                 </div>
             </form>
