--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <meta name="twitter:image" content="http://f.edgesuite.net/imagecache/cropfit@w=900@cr=543,303,2331,1554@qa=85/data/www.narconon.org/files/nn-uk/wide-outside-shot_en_GB.jpg?_=trDBd4nX">
 
     <!-- Page Styles -->
+    <link rel="stylesheet" type="text/css" href="theme/css/ani.css"/>
     <link rel="stylesheet" type="text/css" href="theme/css/topmenu.css"/>
     <link rel="stylesheet" type="text/css" href="theme/css/jumbotron-banner.css"/>
     <link rel="stylesheet" type="text/css" href="theme/css/bodyobjects.css"/>
@@ -40,7 +41,6 @@
     <link rel="stylesheet" type="text/css" href="theme/css/footer.css"/>
     <link rel="stylesheet" type="text/css" href="theme/css/contact_form.css"/>
     <link rel="stylesheet" type="text/css" href="theme/css/geolocation.css"/>
-    <link rel="stylesheet" type="text/css" href="theme/css/ani.css"/>
 
     <style>
         #main_parallax_parent {
@@ -1325,6 +1325,10 @@
                         window.console && console.log(e);
                     }
                 });
+            $("#videobox a.close").one("click", function(){
+                vid_player.pause();
+                console.log("#videobox closed");
+            });
             vid_player.poster("");
             vid_player.src("http://progmedia.edgesuite.net/videos/narconon/en_gb/narconon-family-testimonial-linda-s_640_en_gb.mp4?v=nn-family-linda-s");
             vid_player.play();
@@ -1486,8 +1490,8 @@
     </script>
 
     <!-- Contact Form -->
-    <div id="contact_us_form" class="fullscreen_overlay fadeIn animated">
-        <div class="form_container bounceInDown animated">
+    <div id="contact_us_form" class="fullscreen_overlay">
+        <div class="form_container">
             <form method="post" action="thankyou.html">
                 <div class="modal-header">
                     <button type="button" class="close" role="close" data-dismiss="modal" aria-hidden="true">&times;</button>
