--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                 <p>At Narconon, <strong>we do not believe an addict is an addict for life</strong>. We do not believe addiction is an incurable disease. We believe in getting better.</p>
                 <p>There is no mistaking it—drug abuse is a planetwide epidemic. If you or someone you know is caught in the grip of addiction, you are no doubt living in your own personal nightmare.</p>
                 
-                <p>We believe a person trapped in the dwindling spiral of substance abuse <i>can take their life back</i> and live drug free. How do we do it? That’s the Narconon difference.</p>
+                <p>We believe a person trapped in the dwindling spiral of substance abuse <i>can take their life back</i> and <strong>live drug free</strong>. How do we do it? That’s the Narconon difference.</p>
                 <div class="clearfix"></div>
             </div>
             <div class="light-bandit extender clearfix">
@@ -521,7 +521,7 @@
                         </div>
                     </div>
                 </div>
-                <h2 class="michroma intro-para-title home-global-success-title"><span itemprop="name">A Global Success Story</span></h2>
+                <h2 class="michroma intro-para-title home-global-success-title"><span itemprop="name">a Drug-FREE Withdrawal system (No prescribed drugs)y</span></h2>
                 <div itemprop="description">
                     <p>Today, Narconon drug and alcohol rehabilitation centres operate in more than 20&nbsp;nations—a global network of rehabilitation centres with one shared purpose—to free people from the grip of addiction. For good.</p>
 
