--- a/index2.html
+++ b/index2.html
@@ -372,7 +372,7 @@
             <!-- >Welcome to  Narconon United Kingdom START -->
             <div class="welcome gcui-responsive-width">
                 <div class="gcui-responsive-width centered ">
-                    <h2 class="blues michroma text-center">Welcome to  Narconon United Kingdom</h2>
+                    <h2 class="blues michroma text-center">You <i>can</i> beat addiction</h2>
                 </div>
                 <div class="main-content text-center">
                     <p class="mb3">
@@ -383,11 +383,7 @@
             <!-- >Welcome to  Narconon United Kingdom END -->
 
             <div class="what-narconon-grads-say pt2" style="padding-top:0">
-                <h2 class="test-title michroma">Many Faces. One Workable Solution.</h2>
-                <h3 class="test-subtitle" style="margin-bottom: 10px"><strong>Discover many who say Narconon’s unique approach to rehabilitation delivered true recovery.</strong></h3>
-                <h3 class="test-subtitle" style="margin-bottom: 10px">These people survived the nightmare of drug addiction—as addicts—and as family members.<br/>
-                Hear their stories. Find out how Narconon helped them regain their lives.</h3>
-                <div class="success-disclaimer mb2">As with any drug rehabilitation programme, individual results will&nbsp;vary.</div>
+                
                 <div id="video_carousel_thumbs" class="videos-carousel">
                     <div class="owl-arrow owl-arrow-prev"></div>
                     <div class="owl-arrow owl-arrow-next"></div>
@@ -525,16 +521,18 @@
                         </div>
                     </div>
                 </div>
+				<h3 class="test-subtitle" style="margin-bottom: 10px">These people survived the nightmare of drug addiction—as addicts—and as family members.<br/>
+                Hear their stories. Find out how Narconon helped them regain their lives.</h3>
+                <div class="success-disclaimer mb2">As with any drug rehabilitation programme, individual results will&nbsp;vary.</div>
             </div>
 
             <div class="spacer" style="height:40px"></div>
 
         <div class="extender more-info-front-special">
             <div class="intro-para">
-                <h3 class="test-subtitle" style="margin-bottom:5px;">We want what you want:</h3>
-                <h2 class="michroma intro-para-title">Drug Free. For Good.</h2>
-                <h3 class="test-subtitle">Learn about our unique programme</h3>
-                <div class="mini-help-block">
+                <h3 class="test-subtitle" style="margin-bottom:5px;">our unique programme:</h3>
+                <h2 class="michroma intro-para-title">a Drug-FREE Withdrawal system (No prescribed drugs)</h2>
+                                <div class="mini-help-block">
                     <div><a class="michroma mini-help-block-get-help">GET HELP NOW</a></div>
                     <a class="mini-help-block-call-now autofill-phone-number-href" href="tel:+01435512460">
                         <div class="mini-call">CALL US</div>
@@ -557,25 +555,25 @@
                             <div class="mini-assistance double-bracket-after">Contact Us</div>
                         </div>
                     </div>
-                </div>
-                <p><strong>There is no mistaking it—drug abuse is a planetwide epidemic.</strong> If you or someone you know is caught in the grip of addiction, you are no doubt living in your own personal nightmare.</p>
-                <p>At Narconon, we do not believe an addict is an addict for life. We do not believe addiction is an incurable disease. We believe in getting better.</p>
-                <p>We believe a person trapped in the dwindling spiral of substance abuse can take their life back and live drug free. How do we do it? That’s the Narconon difference.</p>
+                </div>             
+                <p>At Narconon, <strong>we do not believe an addict is an addict for life</strong>. We do not believe addiction is an incurable disease. We believe in getting better.</p>
+                <p>There is no mistaking it—drug abuse is a planetwide epidemic. If you or someone you know is caught in the grip of addiction, you are no doubt living in your own personal nightmare.</p>
+				<p>We believe a person trapped in the dwindling spiral of substance abuse can take their life back and live drug free. How do we do it? That’s the Narconon difference.</p>
                 <div class="clearfix"></div>
             </div>
             <div class="light-bandit extender clearfix">
                 <div class="intro-para" style="margin-top: 1.1em;">
-                    <p class="steps-leader">The Narconon programme is unique:</p>
+                    <p class="steps-leader">The Narconon programme is unique in three ways:</p>
                 </div>
                 <div class="row">
                     <div class="col-sm-4">
-                        <h4 class="michroma hidden-xs"><a class="nn-color">Drug-free<br class="visible-xs"> Withdrawal</a></h4>
+                        <h4 class="michroma hidden-xs"><a class="nn-color">1. Drug-free<br class="visible-xs"> Withdrawal</a></h4>
                     </div>
                     <div class="col-sm-4">
-                        <h4 class="michroma hidden-xs"><a class="nn-color">New Life<br class="visible-xs"> Detoxification</a></h4>
+                        <h4 class="michroma hidden-xs"><a class="nn-color">2. New Life<br class="visible-xs"> Detoxification</a></h4>
                     </div>
                     <div class="col-sm-4">
-                        <h4 class="michroma hidden-xs"><a class="nn-color">Life<br class="visible-xs"> Skills</a></h4>
+                        <h4 class="michroma hidden-xs"><a class="nn-color">3. Life<br class="visible-xs"> Skills</a></h4>
                     </div>
                 </div>
                 <div class="row">
@@ -618,7 +616,7 @@
                         </div>
                     </div>
                 </div>
-                <h2 class="michroma intro-para-title home-global-success-title"><span itemprop="name">A Global Success Story</span></h2>
+                <h2 class="michroma intro-para-title home-global-success-title"><span itemprop="name">Video: Our Approach</span></h2>
                 <div itemprop="description">
                     <p>Today, Narconon drug and alcohol rehabilitation centres operate in more than 20&nbsp;nations—a global network of rehabilitation centres with one shared purpose—to free people from the grip of addiction. For good.</p>
 
