--- a/disclaimer.html
+++ b/disclaimer.html
@@ -13,7 +13,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 	<link rel="icon" href="/favicon.ico?_=trDBd4nX"/>
     <!-- this page is canonical -->
-    <link rel="stylesheet" type="text/css" href="theme/css/_combined_main.css?_=trDBd4nX"/>
+    <link rel="stylesheet" type="text/css" href="theme/css/combined_main.css?_=trDBd4nX"/>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:400&subset=cyrillic,greek,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="alternate" type="application/rss+xml" title="RSS" href='http://www.narcononuk.org.uk/rss.xml'>
