Submit Form - Conversion Tracking
Added conversion tracking code for form submitted requests.

--- a/thankyou.html
+++ b/thankyou.html
@@ -1,9 +1,4 @@
 <!DOCTYPE html>
-<!--[if lte IE 6]><html class="ie6 ie67 ie678 ie6789 ie678910" lang="en-gb"><![endif]-->
-<!--[if lte IE 7]><html class="ie7 ie67 ie678 ie6789 ie678910" lang="en-gb"><![endif]-->
-<!--[if lte IE 8]><html class="ie8 ie678 ie6789 ie678910" lang="en-gb"><![endif]-->
-<!--[if lte IE 9]><html class="ie9 ie6789 ie678910" lang="en-gb"><![endif]-->
-<!--[if lte IE 10]><html class="ie10 ie678910" lang="en-gb"><![endif]-->
 <!--[if gt IE 10]><!--><html lang="en-gb" itemscope itemtype="http://schema.org/WebPage" class="no-js"><!--<![endif]-->
 <head>
 	<meta charset="utf-8">
@@ -27,39 +22,6 @@
 
 </head>
 <body class=" front narconon-center-site  phone-number-detection-ip context-livesite org-narconon-united-kingdom front locale-en locale-en_GB">
-
-    <!--[if lte IE 7]>
-    <style>
-    #old_browser { width: 100%; font-size: 13px; background: #f1eca4; height: 35px; font-family: Arial, Verdana, sans-serif; margin: 0; box-sizing: content-box; }
-    #old_browser .warn { color: #e85c17; font-size: 25px; padding: 0 15px; width: 60px}
-    #old_browser .msg { padding-right: 10px; }
-    #old_browser .link { text-align: right; padding-right: 10px; }
-    #old_browser .link a { color: #e85c17; }
-    #old_browser .msg-ie { display: none; }
-    </style>
-
-    <table id="old_browser" border="0" cellpadding="0" cellspacing="0">
-        <tr>
-            <td class="warn"><img width="27" height="22" src="/theme/images/ie-warning-symbol.gif"/></td>
-            <td class="msg">Your browser <span class="msg-ie msg-ie6">(Internet Explorer 6)</span> <span class="msg-ie msg-ie7">(Internet Explorer 7)</span> is out of date. It has known security flaws and may not display all features of this and other websites.
-            </td>
-            <td class="link"><a target="_blank" href="http://browser-update.org/update-browser.html">Learn how to update your&nbsp;browser&nbsp;»</a></td>
-        </tr>
-    </table>
-    <![endif]-->
-
-    <!--[if IE 6]>
-    <style>
-    #old_browser .msg-ie.msg-ie6 { display: inline; }
-    </style>
-    <![endif]-->
-    <!--[if IE 7]>
-    <style>
-    #old_browser .msg-ie.msg-ie7 { display: inline; }
-    </style>
-    <![endif]-->
-    
-
     <div id="main_parallax_parent" class="parallax main-scrolling-elem">
         <div class="parallax__layer parallax__layer--base clone-content">
         <div class="banner-overall-wrapper">
@@ -331,6 +293,25 @@
         if (window.jQuery) for (var f in documentReadyHolder) documentReadyHolder[f]($);
         window.webshim && webshim.polyfill('forms');
     </script>
+
+<!-- Google Code for enquiry Conversion Page -->
+<script type="text/javascript">
+/* <![CDATA[ */
+var google_conversion_id = 963307701;
+var google_conversion_language = "en";
+var google_conversion_format = "3";
+var google_conversion_color = "ffffff";
+var google_conversion_label = "n0p0CMXdvVcQtdGrywM";
+var google_remarketing_only = false;
+/* ]]> */
+</script>
+<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+</script>
+<noscript>
+<div style="display:inline;">
+<img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/963307701/?label=n0p0CMXdvVcQtdGrywM&amp;guid=ON&amp;script=0"/>
+</div>
+</noscript>
 
 </body>
 </html>
