--- a/index2.html
+++ b/index2.html
@@ -336,7 +336,7 @@
             }
         }
     </style>
-<!-- Video Animation START -->
+
     <script>
         (function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement)
         var _gcui_env = 'livesite';
@@ -352,7 +352,7 @@
         var _tr = _tr || [];
         globalNoCloning = true;
     </script>
-<!-- Video Animation END -->
+
     <style>
         .life-back-text-1 {}
         .life-back-text-1 img {
@@ -423,8 +423,12 @@
             -moz-osx-font-smoothing: auto;
         }
     </style>
+    <!-- Google Call Tracker Function -->
+    <script type="text/javascript">
+        (function(a,e,c,f,g,b,d){var h={ak:"963307701",cl:"TfC4CPSa1GAQtdGrywM"};a[c]=a[c]||function(){(a[c].q=a[c].q||[]).push(arguments)};a[f]||(a[f]=h.ak);b=e.createElement(g);b.async=1;b.src="//www.gstatic.com/wcm/loader.js";d=e.getElementsByTagName(g)[0];d.parentNode.insertBefore(b,d);a._googWcmGet=function(b,d,e){a[c](2,b,h,d,null,new Date,e)}})(window,document,"_googWcmImpl","_googWcmAk","script");
+    </script>
 </head>
-<body class="front narconon-center-site  phone-number-detection-ip context-livesite org-narconon-united-kingdom front locale-en locale-en_GB">
+<body class="front narconon-center-site  phone-number-detection-ip context-livesite org-narconon-united-kingdom front locale-en locale-en_GB" onload="_googWcmGet('autofill-phone-number', '01435 512 460')">
     
     <script>
         var documentReadyHolder = [], preDocReadyBindOrExecHolder = [], preDocReadyTriggerHolder = [];
@@ -961,7 +965,7 @@
                                 </div>
                                 <div class="org-intro-data" id="org-intro-data-3">
                                     <p>
-                                        » Phone: <nobr dir="ltr"><a href="tel:+01435512460">01435 512 460</a></nobr><br>
+                                        » Phone: <nobr dir="ltr"><a href="tel:+01435512460" class="autofill-phone-number"><span>01435 512 460</span></a></nobr><br>
                                     </p>
                                 </div>
                             </div>
@@ -1362,6 +1366,9 @@
     <script>
         if (window.jQuery) for (var f in documentReadyHolder) documentReadyHolder[f]($);
         window.webshim && webshim.polyfill('forms');
+
+        // Google Phone Call Forwarding function
+
     </script>
 
     <!-- Contact Form -->
