--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <link rel="stylesheet" type="text/css" href="theme/css/bodyobjects.css"/>
     <link rel="stylesheet" type="text/css" href="theme/css/videos-box.css"/>
     <link rel="stylesheet" type="text/css" href="theme/css/footer.css"/>
-    <link rel="stylesheet" type="text/css" href="theme/css/contact_form.css"/>
+    <link rel="stylesheet" type="text/css" href="theme/css/modal.css"/>
     <link rel="stylesheet" type="text/css" href="theme/css/geolocation.css"/>
 
     <style>
@@ -1155,9 +1155,18 @@
                     <div class="copyright-inner" itemscope itemtype="http://schema.org/Organization" itemid="http://www.narcononuk.org.uk/">
                         <meta itemprop="telephone" content="01435512460">
                         <div>
-                            <a href="tmnotice.html">© 2015  
-                            <span itemprop="name">Narconon United Kingdom</span>. 
-                            All Rights Reserved.</a> &nbsp;&bull;&nbsp; <a href="online-privacy-notice.html">Online Privacy Notice</a> &nbsp;&bull;&nbsp; <a href="terms-of-use.html">Terms of Use</a> &nbsp;&bull;&nbsp; <a href="notice-of-privacy-practices.html">Notice of Privacy Practices</a> &nbsp;&bull;&nbsp; <a href="disclaimer.html">Disclaimer: Individual results are not guaranteed and may&nbsp;vary.</a> <br/>&nbsp;
+                            <a href="tmnotice.html">
+                                © 2015 <span itemprop="name">Narconon United Kingdom</span>. All Rights Reserved.
+                            </a>
+                             &nbsp;&bull;&nbsp; 
+                            <a href="online-privacy-notice.html">Online Privacy Notice</a>
+                             &nbsp;&bull;&nbsp; 
+                            <a href="terms-of-use.html">Terms of Use</a>
+                             &nbsp;&bull;&nbsp; 
+                            <a href="notice-of-privacy-practices.html">Notice of Privacy Practices</a>
+                             &nbsp;&bull;&nbsp; 
+                            <a href="disclaimer.html">Disclaimer: Individual results are not guaranteed and may&nbsp;vary.</a> 
+                            <br/>&nbsp;
                         </div>
                         <div class="copyright-end-line">Narconon and the Narconon logo are trademarks and service marks owned by the Association for Better Living and Education International and are used with its permission.
                         </div>
