--- a/index2.html
+++ b/index2.html
@@ -16,6 +16,7 @@
 
     <title>Narconon UK Drug & Alcohol Rehabilitation</title>
     <meta name="description" content="Narconon United Kingdom provides drug & alcohol rehab, drug education and prevention programs that help millions improve their lives. Call 01435 512 460 if you need help." />
+    <!--
     <meta property="og:url" content="http://www.narcononuk.org.uk/" />
     <meta property="og:site_name" content="Narconon United Kingdom" />
     <meta property="og:title" content="Narconon UK Drug & Alcohol Rehabilitation" />
@@ -27,6 +28,7 @@
     <meta name="twitter:title" content="Narconon UK Drug & Alcohol Rehabilitation">
     <meta name="twitter:description" content="Narconon United Kingdom provides drug & alcohol rehab, drug education and prevention programs that help millions improve their lives. Call 01435 512 460 if you need help." >
     <meta name="twitter:image" content="http://f.edgesuite.net/imagecache/cropfit@w=900@cr=543,303,2331,1554@qa=85/data/www.narconon.org/files/nn-uk/wide-outside-shot_en_GB.jpg?_=trDBd4nX">
+    -->
 
     <!-- Page Styles -->
     <link rel="stylesheet" type="text/css" href="theme/css/ani.css"/>
@@ -35,7 +37,7 @@
     <link rel="stylesheet" type="text/css" href="theme/css/videos-box.css"/>
     <link rel="stylesheet" type="text/css" href="theme/css/footer.css"/>
     <link rel="stylesheet" type="text/css" href="theme/css/modal.css"/>
-    <link rel="stylesheet" type="text/css" href="theme/css/geolocation.css"/>
+    <!--<link rel="stylesheet" type="text/css" href="theme/css/geolocation.css"/>-->
 
     <style>
         #main_parallax_parent {
@@ -928,7 +930,7 @@
                         </script>
                         
                     </div>
-                    
+                    <!--
                     <script src="https://maps.googleapis.com/maps/api/js"></script>
                     <script>
                         $(document).ready(function() {
@@ -1001,7 +1003,7 @@
                             </div>
                         </div>
                     </div>
-
+                    -->
                     <div class="pull-quote-center-clean life-back-text extender">
                         <div class="life-back-text-1"><img src="//f.edgesuite.net/imagecache/scalefit-210x210/data/www.narconon.org/files/logo/narconon-united-kingdom-logo.png"/></div>
                         <h2 class="life">NARCONON UNITED KINGDOM</h2>
@@ -1401,9 +1403,6 @@
     <script>
         if (window.jQuery) for (var f in documentReadyHolder) documentReadyHolder[f]($);
         window.webshim && webshim.polyfill('forms');
-
-        // Google Phone Call Forwarding function
-
     </script>
 
     <!-- Contact Form -->
