--- a/index2.html
+++ b/index2.html
@@ -7,28 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="icon" href="/favicon.ico?_=trDBd4nX"/>
+    <link rel="icon" href="/favicon.ico"/>
     <!-- this page is canonical -->
     <link rel="stylesheet" type="text/css" href="theme/css/combined_main.css"/>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:400&subset=cyrillic,greek,latin-ext' rel='stylesheet' type='text/css'>
-    <link rel="alternate" type="application/rss+xml" title="RSS" href='http://www.narcononuk.org.uk/rss.xml'>
 
     <title>Narconon UK Drug & Alcohol Rehabilitation</title>
     <meta name="description" content="Narconon United Kingdom provides drug & alcohol rehab, drug education and prevention programs that help millions improve their lives. Call 01435 512 460 if you need help." />
-    <!--
-    <meta property="og:url" content="http://www.narcononuk.org.uk/" />
-    <meta property="og:site_name" content="Narconon United Kingdom" />
-    <meta property="og:title" content="Narconon UK Drug & Alcohol Rehabilitation" />
-    <meta property="og:description" content="Narconon United Kingdom provides drug & alcohol rehab, drug education and prevention programs that help millions improve their lives. Call 01435 512 460 if you need help." />
-    <meta property="og:image" content="http://f.edgesuite.net/imagecache/cropfit@w=900@cr=543,303,2331,1554@qa=85/data/www.narconon.org/files/nn-uk/wide-outside-shot_en_GB.jpg?_=trDBd4nX" />
-    <meta property="og:type" content="website`" />
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@narconon">
-    <meta name="twitter:title" content="Narconon UK Drug & Alcohol Rehabilitation">
-    <meta name="twitter:description" content="Narconon United Kingdom provides drug & alcohol rehab, drug education and prevention programs that help millions improve their lives. Call 01435 512 460 if you need help." >
-    <meta name="twitter:image" content="http://f.edgesuite.net/imagecache/cropfit@w=900@cr=543,303,2331,1554@qa=85/data/www.narconon.org/files/nn-uk/wide-outside-shot_en_GB.jpg?_=trDBd4nX">
-    -->
 
     <!-- Page Styles -->
     <link rel="stylesheet" type="text/css" href="theme/css/ani.css"/>
