--- a/index2.html
+++ b/index2.html
@@ -1208,7 +1208,7 @@
         </div>
     </div>
 
-    <script src="theme/js/combined.js"></script>
+    <script src="theme/js/combined2.js"></script>
 
     <!-- Header Video START -->
     <script>
