--- a/index2.html
+++ b/index2.html
@@ -9,21 +9,12 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="icon" href="/favicon.ico"/>
     <!-- this page is canonical -->
-    <link rel="stylesheet" type="text/css" href="theme/css/combined_main.css"/>
+    <link rel="stylesheet" type="text/css" href="theme/css/combined_all.css"/>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:400&subset=cyrillic,greek,latin-ext' rel='stylesheet' type='text/css'>
 
     <title>Narconon UK Drug & Alcohol Rehabilitation</title>
     <meta name="description" content="Narconon United Kingdom provides drug & alcohol rehab, drug education and prevention programs that help millions improve their lives. Call 01435 512 460 if you need help." />
-
-    <!-- Page Styles -->
-    <link rel="stylesheet" type="text/css" href="theme/css/ani.css"/>
-    <link rel="stylesheet" type="text/css" href="theme/css/topmenu.css"/>
-    <link rel="stylesheet" type="text/css" href="theme/css/bodyobjects.css"/>
-    <link rel="stylesheet" type="text/css" href="theme/css/videos-box.css"/>
-    <link rel="stylesheet" type="text/css" href="theme/css/footer.css"/>
-    <link rel="stylesheet" type="text/css" href="theme/css/modal.css"/>
-    <!--<link rel="stylesheet" type="text/css" href="theme/css/geolocation.css"/>-->
 
     <style>
         #main_parallax_parent {
